--- a/cardapio.css
+++ b/cardapio.css
@@ -16,7 +16,7 @@ h1 {
 }
 
 body {
-  background-image: url(images/renato);
+  background-image: url(images/acaibg.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
@@ -48,7 +48,7 @@ button:hover {
 .card {
   background-color: #ffffff90;
   border-radius: 4%;
-  padding: 40px;
+  padding: 60px;
   box-shadow: 6px 6px 4px 0px #00000080;
 }
 
@@ -62,6 +62,7 @@ p {
   position: relative;
   top: 10px;
   margin-top: 2px;
+  font-size: 120%;
 }
 
 h2 {
@@ -77,7 +78,7 @@ h2 {
 
 .card2 {
   border-radius: 4%;
-  padding: 40px;
+  padding: 70px;
 }
 .container2 {
   display: flex;
